syntax = "proto3";

package proyectos;

service ProyectosService {
  rpc CreateProyecto (CreateProyectoRequest) returns (Proyecto) {}
  rpc GetProyecto (GetProyectoRequest) returns (Proyecto) {}
  rpc ListProyectos (ListProyectosRequest) returns (ListProyectosResponse) {}
  rpc UpdateProyecto (UpdateProyectoRequest) returns (Proyecto) {}
  rpc DeleteProyecto (DeleteProyectoRequest) returns (DeleteProyectoResponse) {}
}

message Proyecto {
  string id = 1;
  string name = 2;
  string location = 3;
  string startedAt = 4;
  string completedAt = 5;
  int32 budget = 6;
  string phone = 7;
  string created_at = 8;
}

message CreateProyectoRequest {
  string name = 1;
  string location = 2;
  string startedAt = 3;
  string completedAt = 4;
  double budget = 5;
  string phone = 6;
}

message GetProyectoRequest {
  string id = 1;
}

message ListProyectosRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListProyectosResponse {
  repeated Proyecto proyectos = 1;
  int32 total = 2;
}

message UpdateProyectoRequest {
  string id = 1;
  string name = 2;
  string location = 3;
  string startedAt = 4;
  string completedAt = 5;
  double budget = 6;
  string phone = 7;
}

message DeleteProyectoRequest {
  string id = 1;
}

message DeleteProyectoResponse {
  bool success = 1;
}
// Copia aqu√≠ el contenido de proyectos-service/proto/proyectos/proyectos.proto
