syntax = "proto3";

package proyectosinmobiliarios;

service ProyectosInmobiliariosService {
  rpc CreateProyecto (CreateProyectoRequest) returns (Proyecto) {}
  rpc GetProyecto (GetProyectoRequest) returns (Proyecto) {}
  rpc ListProyectos (ListProyectosRequest) returns (ListProyectosResponse) {}
  rpc UpdateProyecto (UpdateProyectoRequest) returns (Proyecto) {}
  rpc DeleteProyecto (DeleteProyectoRequest) returns (DeleteProyectoResponse) {}
}

message Proyecto {
  int32 proyecto_id = 1;
  int32 empresa_id = 2;
  string nombre = 3;
  string ubicacion = 4;
  string descripcion = 5;
  string fechaInicio = 6;
  string fechaFin = 7;
  string estadoPropiedad = 8;
  string created_at = 9;
  string updated_at = 10;
  string telefonoContacto = 11;
  string emailContacto = 12;
  string ciudad = 13;
}

message CreateProyectoRequest {
  int32 empresa_id = 1;
  string nombre = 2;
  string ubicacion = 3;
  string descripcion = 4;
  string fechaInicio = 5;
  string fechaFin = 6;
  string estadoPropiedad = 7;
  string telefonoContacto = 8;
  string emailContacto = 9;
  string ciudad = 10;
}

message GetProyectoRequest {
  int32 proyectoId = 1;
}

message ListProyectosRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message ListProyectosResponse {
  repeated Proyecto proyectos = 1;
  int32 total = 2;
}

message UpdateProyectoRequest {
  int32 proyectoId = 1;
  int32 empresaId = 2;
  string nombre = 3;
  string ubicacion = 4;
  string descripcion = 5;
  string fechaInicio = 6;
  string fechaFin = 7;
  string estadoPropiedad = 8;
  string telefonoContacto = 9;
  string emailContacto = 10;
  string ciudad = 11;
}

message DeleteProyectoRequest {
  int32 proyectoId = 1;
}

message DeleteProyectoResponse {
  bool success = 1;
}